
CMAKE_MINIMUM_REQUIRED(VERSION 2.8 )

SET(OUTPUT_OBJECT client )

SET(DEBUGFLAGS -g)
SET(CFLAGS " -std=c++0x -Wall -O2 -DWITH_NONAMESPACES ")

INCLUDE_DIRECTORIES( 
	.
    )

AUX_SOURCE_DIRECTORY(. SRC_LIST)

MESSAGE("main SRC LIST : \n" ${SRC_LIST})

SET(LIBS boost_thread
		)


if( CMAKE_BUILD_TYPE STREQUAL "Debug" )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS} ${DEBUGFLAGS} ")
else( CMAKE_BUILD_TYPE STREQUAL "Release" )
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CFLAGS} ")
endif( CMAKE_BUILD_TYPE STREQUAL "Debug" )
	MESSAGE( "BUILD TYPE:" ${CMAKE_BUILD_TYPE} ${CMAKE_CXX_FLAGS})

ADD_EXECUTABLE(${OUTPUT_OBJECT} ${SRC_LIST} )

TARGET_LINK_LIBRARIES(${OUTPUT_OBJECT} ${LIBS} )


